Remove overflow:hidden on docs-content (fixes #1001)

--- a/client/styles/docs.styl
+++ b/client/styles/docs.styl
@@ -747,7 +747,6 @@ body
 .docs-content
   clearfix()
   color $color-text
-  overflow hidden
   min-height 200px
 
   pre code a,
